Fix wrong background color

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-  background-color: rgb(0, 8, 50);
+  background-color: #000a3c;
 }
 
 header {
